Modificacions al Ranking.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
 
         <activity
             android:name=".application.MainActivity"
+            android:launchMode="singleInstance"
             android:exported="true" />
 
     </application>
